# floating-point-protocol

./: .gitignore  DEPLOYMENT_GUIDE.md  DEPLOYMENT_INSTRUCTIONS.md  README.md  ZK_INTEGRATION_GUIDE.md  package.json  pnpm-lock.yaml
app/: globals.css  layout.tsx  not-found.tsx  page.tsx
app/contracts/: page.tsx
app/docs/: page.tsx
app/faq/: page.tsx
app/guide/: page.tsx
app/help/: page.tsx
app/owner/: not-found.tsx  page.tsx
app/privacy/: page.tsx
app/security/: page.tsx
app/terms/: page.tsx
components/: contract-deploy-info.tsx  deposit-panel.tsx  floating-point-protocol.tsx  implementation-status.tsx  owner-dashboard.tsx  particle-field.tsx  payment-panel.tsx  point-detail-modal.tsx  protocol-stats.tsx  security-audit-display.tsx  side-panel.tsx  transaction-history.tsx  treasury-info.tsx  usage-guide.tsx  user-points-inventory.tsx  wallet-connect.tsx  whitepaper.tsx  withdraw-panel.tsx
ethereum/: .env.example  hardhat.config.ts  package-zk.json  package.json  tsconfig.json
hardhat/: .env
lib/: contract-abi.ts  fpp-abis.ts  fpp-approval-guard.ts  fpp-attack-prevention.ts  fpp-client.ts  fpp-comprehensive-security.ts  fpp-context.tsx  fpp-cross-function-security.ts  fpp-cross-validation.ts  fpp-crypto.ts  fpp-ddos-protection.tsx  fpp-eip712.ts  fpp-future-security.ts  fpp-hash.ts  fpp-merkle.ts  fpp-privacy-guard.ts  fpp-scsvs-audit.ts  fpp-security-audit-report.md  fpp-security-integration.ts  fpp-security.ts  fpp-types.ts
solana/: Cargo.toml  README.md  package.json
solana/src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs
(+22 files in other folders)
